--- a/index.html
+++ b/index.html
@@ -4,12 +4,30 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/svg+xml" href="/vite.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link css here only when ccs is not imported in js yet -->
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
+    <link rel="stylesheet" href="style.css">
     <title>Hello</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- <script src="./js/app.js" type="module"></script> -->
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#lien1">lien1</a></li>
+          <li><a href="#lien2">lien2</a></li>
+          <li><a href="#lien3">lien3</a></li>
+          <li><a href="#lien4">lien4</a></li>
+          <li><a href="#lien5">lien5</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div class="paralax">
+      <h2>voici un paralax</h2>
+    </div>
+    <section id="lien1"><h2>lien1</h2></section>
+    <section id="lien2"><h2>lien2</h2></section>
+    <section id="lien3"><h2>lien3</h2></section>
+    <section id="lien4"><h2>lien4</h2></section>
+    <section id="lien5"><h2>lien5</h2></section>
+
+    <script src="app.js" type="module"></script>
   </body>
 </html>
