--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
   </head>
   <body>
     <header>
+      <div>
+        <h1>Hello</h1>
+      </div>
       <nav>
         <ul>
-          <li><a href="#lien1">lien1</a></li>
+          <li><a class="active" href="#lien1">lien1</a></li>
           <li><a href="#lien2">lien2</a></li>
           <li><a href="#lien3">lien3</a></li>
           <li><a href="#lien4">lien4</a></li>
@@ -19,14 +22,12 @@
         </ul>
       </nav>
     </header>
-    <div class="paralax">
-      <h2>voici un paralax</h2>
-    </div>
     <section id="lien1"><h2>lien1</h2></section>
     <section id="lien2"><h2>lien2</h2></section>
     <section id="lien3"><h2>lien3</h2></section>
     <section id="lien4"><h2>lien4</h2></section>
     <section id="lien5"><h2>lien5</h2></section>
+    <hr class="paralax">
 
     <script src="app.js" type="module"></script>
   </body>
